2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Cancel the svnroot default property for
	external modules.
	* templates/module.tmpl: Add a warning for non GNOME modules.

2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-module-xml.tmpl: Typo: #endif to #end
	if.

2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* releases.py:
	* templates/language-release-module-xml.tmpl: Added <svnpath> also for
	documentation po files.

2007-05-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added xdg-user-dirs-gtk to Extras.
	Fixes bug #436587.
	Pybliographer reset to HEAD.

2007-05-04  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Assamese translation coordinator.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added nemiver module. Fixes #435568.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Track HEAD for glib and gtk+ for 2.20.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* view-module.py: Do not show 100% when not all strings are
	translated.
	Sort by translated strings instead of supportedness.

2007-05-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-panel, gnome-desktop, 
	gnome-session and gnome-menus for 2.18.

2007-04-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched libwnck and zenity for 2.18.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Corrected display bug by adding silent
	directive.  

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Sort branches and add links to branches in
	the header.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Create two separate lists of releases.
	* releases.xml.in: Added status property to release tag.
	* templates/list-releases.tmpl: Display separately official and