@@ -558,4 +558,10 @@
     <module id="pan2"/>
     <module id="regexxer"/>
   </release>
+  <release id="freedesktop.org" type="external">
+    <_description>freedesktop.org (non-GNOME).</_description>
+    <module id="shared-mime-info"/>
+    <module id="xdg-user-dirs"/>
+    <module id="xkeyboard-config"/>
+  </release>
 </releases>
